change some wordings and fix bug on mobile side-nav

--- a/src/app/styles/experience.css
+++ b/src/app/styles/experience.css
@@ -84,7 +84,7 @@
     min-height: 50vh;
     color: inherit;
     text-align: center;
-    padding-top: 40px;
+    padding-top: 100px;
   }
 
   .job-experience-header {
